--- a/src/annealing/Gibbs.md.in
+++ b/src/annealing/Gibbs.md.in
@@ -1,5 +1,5 @@
-Botlzmann machines
-==================
+Gibbs sampling and Botlzmann machines
+=====================================
 
 ```{.python .cb.nb show=none, live_output=true}
 from annealing.Gibbs import *
@@ -11,11 +11,44 @@ plt.style.use('classic')
 Resources
 ---------
 
-* https://medium.com/machine-learning-researcher/boltzmann-machine-c2ce76d94da5
-* https://towardsdatascience.com/restricted-boltzmann-machine-how-to-create-a-recommendation-system-for-movie-review-45599a406deb
-* With MNIST https://www.pyimagesearch.com/2014/06/23/applying-deep-learning-rbm-mnist-using-python/
+### Gibbs sampler
 
+* http://probability.ca/jeff/ftpdir/varnew.pdf
+  - Rates of Convergence for Gibbs Sampling for Variance Component Models
+  - 1993
+  - Rosenthal
 
+* https://jwmi.github.io/BMS/chapter6-gibbs-sampling.pdf
+  - Chapter 6 of unknown book
+
+* https://ocw.mit.edu/courses/economics/14-384-time-series-analysis-fall-2013/lecture-notes/MIT14_384F13_lec26.pdf
+  - Lecture 26. MCMC: Gibbs Sampling
+  - Mikusheva
+  - 2007
+
+### Boltzmann machines
+
+* https://arxiv.org/pdf/1806.07066.pdf
+  - Restricted Boltzmann Machines: Introduction and Review
+  - 2018
+  - Montufar
+* https://christian-igel.github.io/paper/TRBMAI.pdf
+  - Training Restricted Boltzmann Machines: An Introduction
+  - 2014
+  - Fischer, Igel
+* https://www.csrc.ac.cn/upload/file/20170703/1499052743888438.pdf
+  - A Practical Guide to Training Restricted Boltzmann Machines, version 1
+  - 2010.09.03
+  - Hinton
+* https://www.cs.toronto.edu/~hinton/csc321/readings/boltz321.pdf
+  - Boltzmann Machines
+  - 2007.03.25
+  - Hinton
+
+### Others
+
+* https://en.wikipedia.org/wiki/Kullback%E2%80%93Leibler_divergence
+  - KL-divirgence
 
 Comparing ideal and Gibbs-sampled distributions
 -----------------------------------------------
